--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 This file lists all contrubutors on this project .
 
 BAKERA Thierry <bakerathierry@gmail.com>
-NYABUTO Velentine <>
+NYABUTO Velentine <nyabutovalentine18@gmail.com>
