--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all contributors to this repository
-Nwabueze Franklin <nwafrank2017@gmail.com>
-Asiwaju Ifeoluwa <Ifeasiwaju@gmail.com>
+BAKERA THierry <bakerathierry@gmail.com>
+NYABUTO Velentine <nyabutovalentine18@gmail.com>
